Crud utilities for posts

--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/typeorm": "^6.3.3",
+    "@nestjsx/crud": "^4.4.1",
+    "@nestjsx/crud-request": "^4.4.1",
+    "@nestjsx/crud-typeorm": "^4.4.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "pg": "^7.18.2",
