--- a/package.json
+++ b/package.json
@@ -22,20 +22,24 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
-    "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/platform-express": "^6.11.11",
     "@nestjs/typeorm": "^6.3.3",
     "@nestjsx/crud": "^4.4.1",
     "@nestjsx/crud-request": "^4.4.1",
     "@nestjsx/crud-typeorm": "^4.4.1",
+    "@types/multer": "^1.4.2",
+    "@types/uuid": "^7.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
+    "multer": "^1.4.2",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
